# scan

./: .gitignore  CNAME  Makefile  Readme.md  archives.yml  check.py  main.py  pyproject.toml  scans.json
.github/workflows/: deploy.yml  docs.yml
template/: index.html  scans.json
